<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".agregar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombrePortada"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:textStyle="normal" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eTextLatitud"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eTextLongitud"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/txtDescripcion"
        android:hint="@string/eTextdescRefe"
        android:gravity="top"

        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:id="@+id/fotoGasolinera"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_redondo"
            android:text="@string/textBtnCoordenadas"/>

        <Button
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_redondo"
            android:text="@string/textBtnFoto"/>

        <Button
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_redondo"
            android:text="@string/textBtnGuardar"/>
    </LinearLayout>
</LinearLayout>