<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginLeft="-30dp"
        android:layout_marginTop="-30dp"
        android:layout_marginRight="-30dp"
        android:background="@drawable/borde_imagen"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/opt1"
        android:textSize="24sp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:textAlignment="textStart"
        android:background="@drawable/borde_redondo"
        android:layout_height="wrap_content"
        android:onClick="ejecutarAgregar"/>

    <Button
        android:layout_width="match_parent"
        android:text="@string/opt2"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borde_redondo"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:text="@string/opt3"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borde_redondo"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:text="@string/opt4"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:onClick="salir"
        android:background="@drawable/borde_redondo"
        android:layout_height="wrap_content"/>

</LinearLayout>